Switched to recursive tree traversals
rude not to

--- a/test/Observer.html
+++ b/test/Observer.html
@@ -6,7 +6,7 @@
 	<script src="../../jquery-latest.js"></script>
 	<link rel="stylesheet" href="qunit/qunit.css" media="screen">
 	<script src="qunit/qunit.js"></script>
-	<script data-main='Observer_test' src='../../require.js'></script>
+	<script data-main='Observer_test' src='../../requirejs/require.js'></script>
 </head>
 <body>
 	<h1 id="qunit-header">Observer Test Suite</h1>
