--- a/test/Observer.html
+++ b/test/Observer.html
@@ -4,9 +4,10 @@
 	<meta charset="utf-8">
 	<title>Observer Test Suite</title>
 	<script src="../../jquery-latest.js"></script>
-	<link rel="stylesheet" href="qunit/qunit.css" media="screen">
 	<script src="qunit/qunit.js"></script>
-	<script data-main='Observer_test' src='http://localhost/Libraries/requirejs/require.js'></script>
+	<link rel="stylesheet" href="qunit/qunit.css" media="screen">
+	<script src='http://localhost/Libraries/requirejs/require.js'></script>
+	<script src='../dist/Observer.js'></script>
 </head>
 <body>
 	<h1 id="qunit-header">Observer Test Suite</h1>
@@ -19,5 +20,6 @@
 		<span>normal test markup</span>
 		<span>awesome test markup</span>
 	</div>
+	<script src='Observer_test.js' defer></script>
 </body>
 </html>
